repeating-linear-gradient(165deg, #3cf64a75, transparent 100px)

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -715,7 +715,7 @@
             height: 100%;
         }
         body {
-            background: linear-gradient(0turn, #3cf64a75, #ffe);
+            background: repeating-linear-gradient(165deg, #3cf64a75, transparent 100px);
         }
         h1.meta {
             margin: 0;
