--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -355,6 +355,7 @@
             tableMeta = document.createElement('thead');
             tableLine = document.createElement('tr');
             privLevel = checkAuthStatus();
+            try {
                 if (!!privLevel) {
                     if (privLevel.eqvol.userlevel & 3 == 3) {
                         tableCell = document.createElement('th');
@@ -365,6 +366,8 @@
                         tableLine.append(tableCell);
                     }
                 }
+            } catch (error) {
+            }
             tableCell = document.createElement('th');
             tableCell.innerText = '地震検知日時';
             tableCell.classList.add('eqvol_header');
@@ -400,23 +403,26 @@
                 console.debug(val_r.detail.Body);
                 tableLine = document.createElement('tr');
                 privLevel = checkAuthStatus();
-                if (!!privLevel) {
-                    if (privLevel.eqvol.userlevel & 3 == 3) {
-                        tableCell = document.createElement('td');
-                        tableCell.classList.add('priv');
-                        tableText = document.createElement('input');
-                        tableText.classList.add('priv');
-                        tableCell.classList.add('eqvol_body');
-                        tableCell.classList.add('eqvol_body_alert');
-                        tableText.value = '手動発報';
-                        tableText.type = 'button';
-                        tableText.dataset.eventid = val_r.detail.Head.EventID + ',' + val_r.detail.Head.jma.EventID + ',' + (val_r.detail.Head.EventID&val_r.detail.Head.jma.EventID);
-                        tableText.setAttribute('onclick', 'issueAlert(this)');
-                        tableCell.append(tableText);
-                        tableText = document.createComment(JSON.stringify(val_r));
-                        tableCell.append(tableText);
-                        tableLine.append(tableCell);
+                try {
+                    if (!!privLevel) {
+                        if (privLevel.eqvol.userlevel & 3 == 3) {
+                            tableCell = document.createElement('td');
+                            tableCell.classList.add('priv');
+                            tableText = document.createElement('input');
+                            tableText.classList.add('priv');
+                            tableCell.classList.add('eqvol_body');
+                            tableCell.classList.add('eqvol_body_alert');
+                            tableText.value = '手動発報';
+                            tableText.type = 'button';
+                            tableText.dataset.eventid = val_r.detail.Head.EventID + ',' + val_r.detail.Head.jma.EventID + ',' + (val_r.detail.Head.EventID&val_r.detail.Head.jma.EventID);
+                            tableText.setAttribute('onclick', 'issueAlert(this)');
+                            tableCell.append(tableText);
+                            tableText = document.createComment(JSON.stringify(val_r));
+                            tableCell.append(tableText);
+                            tableLine.append(tableCell);
+                        }
                     }
+                } catch (error) {
                 }
                 tableCell = document.createElement('td');
                 tableCell.classList.add('eqvol_body');
@@ -542,6 +548,7 @@
             tableMeta = document.createElement('thead');
             tableLine = document.createElement('tr');
             privLevel = checkAuthStatus();
+            try {
                 if (!!privLevel) {
                     if (privLevel.eqvol.userlevel & 3 == 3) {
                         tableCell = document.createElement('th');
@@ -552,6 +559,8 @@
                         tableLine.append(tableCell);
                     }
                 }
+            } catch (error) {
+            }
             tableCell = document.createElement('th');
             tableCell.innerText = '地震検知日時';
             tableCell.classList.add('eqvol_header');
@@ -590,16 +599,19 @@
                 console.debug( val_r.detail.Body );
                 tableLine = document.createElement('tr');
                 privLevel = checkAuthStatus();
-                if (!!privLevel) {
-                    if (privLevel.eqvol.userlevel & 3 == 3) {
-                        tableCell = document.createElement('td');
-                        tableCell.classList.add('priv');
-                        tableCell.classList.add('eqvol_body');
-                        tableCell.classList.add('eqvol_body_alert');
-                        tableText = document.createComment(JSON.stringify(val_r));
-                        tableCell.append(tableText);
-                        tableLine.append(tableCell);
+                try {
+                    if (!!privLevel) {
+                        if (privLevel.eqvol.userlevel & 3 == 3) {
+                            tableCell = document.createElement('td');
+                            tableCell.classList.add('priv');
+                            tableCell.classList.add('eqvol_body');
+                            tableCell.classList.add('eqvol_body_alert');
+                            tableText = document.createComment(JSON.stringify(val_r));
+                            tableCell.append(tableText);
+                            tableLine.append(tableCell);
+                        }
                     }
+                } catch (error) {
                 }
                 tableCell = document.createElement('td');
                 tableCell.style.textAlign='center';
