--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -593,7 +593,7 @@
             tableMeta = document.createElement('tbody');
 
             console.debug( eqvol );
-            Object.keys(eqvol).map(function(key){
+            Object.keys(eqvol).reverse().map(function(key){
                 console.debug( eqvol[key] );
                 val_r = eqvol[key];
 
