--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -267,7 +267,7 @@
                     eqvol_hash = sessionStorage.getItem( (btoa(location.href)).slice(0, 16) + '.eqvol_hash' );
                     eqvol_hash_diff = false;
                     sha256(xhr_responseText).then(function(hash){
-                        console.debug(hash);
+                        console.debug(arguments.callee.name, [hash]);
                         console.debug( 'eqvol_hash == hash', eqvol_hash == hash, eqvol_hash, hash );
                         eqvol_hash_diff = eqvol_hash == hash;
                     }).catch(function(e) {
@@ -517,7 +517,7 @@
                     eqvol_hash = sessionStorage.getItem( (btoa(location.href)).slice(0, 16) + '.eqvol_log_hash' );
                     eqvol_hash_diff = false;
                     sha256(xhr_responseText).then(function(hash){
-                        console.debug(hash);
+                        console.debug(arguments.callee.name, [hash]);
                         console.debug( 'eqvol_hash == hash', eqvol_hash == hash, eqvol_hash, hash );
                         eqvol_hash_diff = eqvol_hash == hash;
                     }).catch(function(e) {
