--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -371,7 +371,7 @@
                 if (!!privLevel) {
                     if (privLevel.eqvol.userlevel & 3 == 3) {
                         tableCell = document.createElement('th');
-                        tableCell.innerText = '▶';
+                        tableCell.innerText = '&#9654;';
                         tableCell.classList.add('priv');
                         tableCell.classList.add('eqvol_header');
                         tableCell.classList.add('eqvol_header_alert');
@@ -569,7 +569,7 @@
                 if (!!privLevel) {
                     if (privLevel.eqvol.userlevel & 3 == 3) {
                         tableCell = document.createElement('th');
-                        tableCell.innerText = '▶';
+                        tableCell.innerText = '&#9654;';
                         tableCell.classList.add('priv');
                         tableCell.classList.add('eqvol_header');
                         tableCell.classList.add('eqvol_header_alert');
