--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -846,5 +846,8 @@
 	</div>
 	<div id="eqvol"></div>
 	<div id="eqvol_log"></div>
+	<div id="ad">
+		<script language="javascript" src="//ad.jp.ap.valuecommerce.com/servlet/jsbanner?sid=3104572&pid=889434107"></script><noscript><a href="//ck.jp.ap.valuecommerce.com/servlet/referral?sid=3104572&pid=889434107" rel="nofollow"><img src="//ad.jp.ap.valuecommerce.com/servlet/gifbanner?sid=3104572&pid=889434107" border="0"></a></noscript>
+	</div>
 </body>
 </html>
