--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="refresh" content="3600">
     <title>xmlfeed_eqvol.php</title>
+    <link rel="shortcut icon" href="https://www.data.jma.go.jp/multi/images/index/indexmark_quake.svg" type="image/svg+xml">
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js?render=6LfCHdcUAAAAAOwkHsW_7W7MfoOrvoIw9CXdLRBA"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
