margin-top and margin-right set to 10px

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -833,6 +833,8 @@
             top: 0;
             right: 0;
             z-index: 1;
+            margin-top: 10px;
+            margin-right: 10px;
         }
     </style>
 </head>
