--- a/html/xmlfeed_eqvol.html
+++ b/html/xmlfeed_eqvol.html
@@ -747,42 +747,43 @@
         }
     </style>
     <style>
-        html {
-            height: 100%;
-        }
-        body {
-            background: repeating-linear-gradient(165deg, #3cf64a75, transparent 100px);
-        }
-        h1.meta {
-            margin: 0;
-        }
-        p.meta {
-            margin: 0;
-        }
-        p.content {
-            margin: 0;
-        }
-        table.content th, table.content td {
-            margin: 0;
-            white-space:nowrap;
-            vertical-align: top;
-        }
-        @media screen and (orientation: portrait) {
-            .display_landscape {
-                display: none;
-            }
-            .display_landscape_text {
-                opacity: 0;
-            }
-        }
-        @media screen and (orientation: landscape) {
-            .display_portrait {
-                display: none;
-            }
-            .display_portrait_text {
-                opacity: 0;
-            }
-        }
+	html {
+		height: 100%;
+	}
+	body {
+		background: repeating-linear-gradient(90deg, transparent, #3cf64a75);
+		background-color: #3cf64a29;
+	}
+	h1.meta {
+		margin: 0;
+	}
+	p.meta {
+		margin: 0;
+	}
+	p.content {
+		margin: 0;
+	}
+	table.content th, table.content td {
+		margin: 0;
+		white-space:nowrap;
+		vertical-align: top;
+	}
+	@media screen and (orientation: portrait) {
+		.display_landscape {
+			display: none;
+		}
+		.display_landscape_text {
+			opacity: 0;
+		}
+	}
+	@media screen and (orientation: landscape) {
+		.display_portrait {
+			display: none;
+		}
+		.display_portrait_text {
+			opacity: 0;
+		}
+	}
     </style>
     <style>
         .eqvol_header {
