--- a/html/xmlfeed_eqvol.html
+++ b/html/xmlfeed_eqvol.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="3600">
-    <title>xmlfeed_eqvol.php</title>
+    <title>Eqvol</title>
     <link rel="shortcut icon" href="https://www.data.jma.go.jp/multi/images/index/indexmark_quake.svg" type="image/svg+xml">
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js?render=6LfCHdcUAAAAAOwkHsW_7W7MfoOrvoIw9CXdLRBA"></script>
