menu準備 31a7afb642f59d73d4d33b42d7a64d26ca2bfbe1

--- a/html/xmlfeed_eqvol.html
+++ b/html/xmlfeed_eqvol.html
@@ -838,7 +838,7 @@
 		.g_id_signin {
 			position: fixed;
 			top: 0;
-			right: 0;
+			right: 50px;
 			z-index: 1;
 			margin-top: 10px;
 			margin-right: 10px;
