cursor menu準備 31a7af

--- a/html/xmlfeed_eqvol.html
+++ b/html/xmlfeed_eqvol.html
@@ -829,6 +829,7 @@
 			margin-top: 10px;
 			margin-right: 10px;
 			background-image: url('./lib/menu1.svg');
+			cursor: pointer;
 		}
 		img.g_id_icon {
 			width: 40px;
