style of div#ad

--- a/html/xmlfeed_eqvol.html
+++ b/html/xmlfeed_eqvol.html
@@ -844,6 +844,16 @@
 			margin-top: 10px;
 			margin-right: 10px;
 		}
+		div#ad {
+			position: fixed;
+			bottom: 0;
+			right: 0;
+			width: 100%;
+			margin: 0 auto;
+			text-align: center;
+			background-color: #c0c0c0a0;
+			padding: 10px 0;
+		}
 	</style>
 </head>
 <body>
