--- a/html/xmlfeed_eqvol.html
+++ b/html/xmlfeed_eqvol.html
@@ -819,6 +819,10 @@
 		}
 	</style>
 	<style>
+		.content table {
+			background-color: #fefefe50;
+			margin-bottom: 10px;
+		}
 		#menubox_switcher {
 			width: 40px;
 			height: 40px;
