--- a/html/xmlfeed_eqvol.html
+++ b/html/xmlfeed_eqvol.html
@@ -835,6 +835,12 @@
 			background-image: url('./lib/menu1.svg');
 			cursor: pointer;
 		}
+		#menubox_innerbox {
+			display: none;
+			position: fixed;
+			width: 75%;
+			background-color: silver;
+		}
 		img.g_id_icon {
 			width: 40px;
 			height: 40px;
@@ -863,6 +869,7 @@
 <body>
 	<div id="menubox">
 		<div id="menubox_switcher"></div>
+		<div id="menubox_innerbox">MenuBox is comming soon.</div>
 	</div>
 	<div id="auth_google_sso">
 		<div id="g_id_onload"
