--- a/html/xmlfeed_eqvol.html
+++ b/html/xmlfeed_eqvol.html
@@ -864,6 +864,14 @@
 			background-color: #c0c0c0a0;
 			padding: 10px 0;
 		}
+		div#footer {
+			width: 100%;
+			margin: 0 auto;
+			text-align: center;
+			border-top: 1px solid black;
+			padding-top: 10px;
+			margin-bottom: 10px;
+		}
 	</style>
 </head>
 <body>
@@ -884,5 +892,6 @@
 	<div id="ad">
 		<script language="javascript" src="//ad.jp.ap.valuecommerce.com/servlet/jsbanner?sid=3104572&pid=889434107"></script><noscript><a href="//ck.jp.ap.valuecommerce.com/servlet/referral?sid=3104572&pid=889434107" rel="nofollow"><img src="//ad.jp.ap.valuecommerce.com/servlet/gifbanner?sid=3104572&pid=889434107" border="0"></a></noscript>
 	</div>
+	<div id="footer">n138.jp</div>
 </body>
 </html>
