--- a/html/xmlfeed_eqvol.html
+++ b/html/xmlfeed_eqvol.html
@@ -892,6 +892,6 @@
 	<div id="ad">
 		<script language="javascript" src="//ad.jp.ap.valuecommerce.com/servlet/jsbanner?sid=3104572&pid=889434107"></script><noscript><a href="//ck.jp.ap.valuecommerce.com/servlet/referral?sid=3104572&pid=889434107" rel="nofollow"><img src="//ad.jp.ap.valuecommerce.com/servlet/gifbanner?sid=3104572&pid=889434107" border="0"></a></noscript>
 	</div>
-	<div id="footer">n138.jp</div>
+	<footer><div id="footer">n138.jp</div></footer>
 </body>
 </html>
